# snake

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  LICENSE.md  Makefile  OPIS.md  OPIS.tex  README.md  install_sfml  snake
.github/workflows/: prepare.yaml
docs/: sprawozdanie_1.tex  sprawozdanie_2.tex
include/: app.h  game.h  gui.h  menu.h
src/: app.cpp  game.cpp  gui.cpp  main.cpp  menu.cpp
